--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,10 @@
 blinker==1.9.0
-build==1.3.0
-certifi==2025.8.3
-charset-normalizer==3.4.3
 click==8.2.1
 colorama==0.4.6
-docutils==0.22
-Flask==3.1.1
-flit==3.12.0
-flit_core==3.12.0
-idna==3.10
+Flask==3.1.2
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
 packaging==25.0
-pyproject_hooks==1.2.0
-requests==2.32.4
-tomli_w==1.2.0
-urllib3==2.5.0
-watchdog==6.0.0
+waitress==3.0.2
 Werkzeug==3.1.3
